Revision history for Dist-Zilla-Plugin-ReadmeFromPod

{{$NEXT}}

0.11 2010-05-26 12:53:27

        - Convert this distro to use @AVAR

        - Remove PodWeaver use in favor of hardcoded POD and improve
          the documentation.

0.10    2010.05.01

        Re-release due to Makefile.PL breakage caused by Dist::Zilla
        FAIL: http://github.com/rjbs/dist-zilla/commit/2e47b6c205

0.09    2010.04.28

        Integrate patch by Mark Gardner <mjgardner@cpan.org> to make
        t/gist-329018.t pass on Win32 and other architectures that
        don't have IO::Handle::sync()

0.08    2010.04.11

        Accidentally released 0.07 with commit
        1abffc5f8711ba77cb27c9bda719da4590f0987e which replaced
        Pod::Text with Pod::Readme. Pod::Readme is too broken to use
        for the reasons detailed in the Git commit log.

0.07    2010.04.11

        Bumped for re-release to CPAN (was deleted)

0.06    2010.03.11
        Using in-memory filehandles as commited in 0.05 doesn't work
        for some unknown reason. There's a TODO test for this
        t/gist-329018.t now taken from http://gist.github.com/329018

0.05    2010.03.11
        Using IO::Scalar instead of Perl's built-in open() to open
        in-memory filehandles breaks in-memory Pod::Text processing of
        POD documents containing UTF-8 (who knows why) (avar)

0.04    2009.06.16
        require Pod::Text 3.13

0.03    2009.05.10
        can override README if it already has [Readme]

0.02	    2009.4.5
        fix VERSION

0.01    2009.4.5
        First version, released on an unsuspecting world.
